# flask-demo

./: Dockerfile  Makefile  README.md  pyproject.toml
